--- a/components/Subtotal/Subtotal.module.css
+++ b/components/Subtotal/Subtotal.module.css
@@ -19,7 +19,7 @@
   margin-right: 5px;
 }
 
-.subtotal > button {
+.subtotal_button {
   background: #f0c14b;
   border-radius: 2px;
   width: 100%;
